syntax = "proto3";

package dbcp.v1;

option go_package = "github.com/deadsnxcks/dbcp/protos/proto/dbcp;dbcpv1";

service DbcpService {
    rpc ListVessels (ListVesselsRequest) returns (ListVesselsResponse);
    rpc GetVessel (GetVesselRequest) returns (GetVesselResponse);
    rpc UpdateVessel (UpdateVesselRequest) returns (UpdateVesselResponse);
    rpc CreateVessel (CreateVesselRequest) returns (CreateVesselResponse);
    rpc DeleteVessel (DeleteVesselRequest) returns (DeleteVesselResponse);

    rpc ListCargoTypes (ListCargoTypesRequest) returns (ListCargoTypesResponse);
    rpc CreateCargoType (CreateCargoTypeRequest) returns (CreateCargoTypeResponse);
    rpc DeleteCargoType (DeleteCargoTypeRequest) returns (DeleteCargoTypeResponse);
    rpc GetCargoType (GetCargoTypeRequest) returns (GetCargoTypeResponse);
    rpc UpdateCargoType (UpdateCargoTypeRequest) returns (UpdateCargoTypeResponse);

    rpc ListOperations (ListOperationsRequest) returns (ListOperationsResponse);
    rpc CreateOperation (CreateOperationRequest) returns (CreateOperationResponse);
    rpc DeleteOperation (DeleteOperationRequest) returns (DeleteOperationResponse);
    rpc GetOperation (GetOperationRequest) returns (GetOperationResponse);
    rpc UpdateOperation (UpdateOperationRequest) returns (UpdateOperationResponse);

    rpc ListCargos (ListCargosRequest) returns (ListCargosResponse);
    rpc ListCargosByVesselID (GetCargosByVesselIDRequest) returns (GetCargosByVesselIDResponse);
    rpc ListCargosByTypeID (GetCargosByTypeIDRequest) returns (GetCargosByTypeIDResponse);
    rpc CreateCargo (CreateCargoRequest) returns (CreateCargoResponse);
    rpc DeleteCargo (DeleteCargoRequest) returns (DeleteCargoResponse);
    rpc GetCargo (GetCargoRequest) returns (GetCargoResponse);
    rpc UpdateCargo (UpdateCargoRequest) returns (UpdateCargoResponse);

    rpc ListStorageLocations (ListStorageLocationsRequest) returns (ListStorageLocationsResponse);
    rpc CreateStorageLocation (CreateStorageLocationRequest) returns (CreateStorageLocationResponse);
    rpc DeleteStorageLocation (DeleteStorageLocationRequest) returns (DeleteStorageLocationResponse);
    rpc GetStorageLocation (GetStorageLocationRequest) returns (GetStorageLocationResponse);
    rpc UpdateStorageLocation (UpdateStorageLocationRequest) returns (UpdateStorageLocationResponse);
    rpc UseStorageLocation (UseStorageLocationRequest) returns (UseStorageLocationResponse);
    rpc ResetStorageLocation (ResetStorageLocationRequest) returns (ResetStorageLocationResponse);

    rpc ListOperationsCargos (ListOperationsCargosRequest) returns (ListOperationsCargosResponse);
    rpc CreateOperationCargo (CreateOperationCargoRequest) returns (CreateOperationCargoResponse);
    rpc DeleteOperationCargo (DeleteOperationCargoRequest) returns (DeleteOperationCargoResponse);
}

message Vessel {
    int64 id = 1;
    string title = 2;
    string vessel_type = 3;
    double max_load = 4;
}

message CargoType {
    int64 id = 1;
    string title = 2;
    double process_cost = 3;
}

message Operation {
    int64 id = 1;
    string title = 2;
    string created_at = 3;
}

message Cargo {
    int64 id = 1;
    string title = 2;
    int64 type_id = 3;
    double weight = 4;
    double volume = 5;
    int64 vessel_id = 6;
}

message StorageLocation {
    int64 id = 1;
    int64 cargo_type_id = 2;
    double max_weight = 3;
    double max_volume = 4;
    optional int64 cargo_id = 5;
    optional string date_of_placement = 6;
}

message OperationCargo {
    int64 operation_id = 1;
    int64 cargo_id = 2;
}

message ListVesselsRequest {}
message ListVesselsResponse {
    repeated Vessel vessels = 1;
}

message GetVesselRequest {
    int64 id = 1;
}
message GetVesselResponse {
    Vessel vessel = 1;
}

message CreateVesselRequest {
    string title = 1;
    string vessel_type = 2;
    double max_load = 3;
}
message CreateVesselResponse {
    int64 id = 1;
}

message UpdateVesselRequest {
    int64 id = 1;
    optional string title = 2;
    optional string vessel_type = 3;
    optional double max_load = 4;
}
message UpdateVesselResponse {}

message DeleteVesselRequest {
    int64 id = 1;
}
message DeleteVesselResponse {}

message ListCargoTypesRequest {}
message ListCargoTypesResponse {
    repeated CargoType cargo_types = 1;
}

message GetCargoTypeRequest {
    int64 id = 1;
}
message GetCargoTypeResponse {
    CargoType cargo_type = 1;
}

message CreateCargoTypeRequest {
    string title = 1;
    double process_cost = 2;
}
message CreateCargoTypeResponse {
    int64 id = 1;
}

message UpdateCargoTypeRequest {
    int64 id = 1;
    optional string title = 2;
    optional double process_cost = 3;
}
message UpdateCargoTypeResponse {}

message DeleteCargoTypeRequest {
    int64 id = 1;
}
message DeleteCargoTypeResponse {}

message ListOperationsRequest {}
message ListOperationsResponse {
    repeated Operation operations = 1;
}

message GetOperationRequest {
    int64 id = 1;
}
message GetOperationResponse {
    Operation operation = 1;
}

message CreateOperationRequest {
    string title = 1;
}
message CreateOperationResponse {
    int64 id = 1;
}

message UpdateOperationRequest {
    int64 id = 1;
    optional string title = 2;
}
message UpdateOperationResponse {}

message DeleteOperationRequest {
    int64 id = 1;
}
message DeleteOperationResponse {}

message ListCargosRequest {}
message ListCargosResponse {
    repeated Cargo cargos = 1;
}

message GetCargosByVesselIDRequest {
    int64 vessel_id = 1;
}
message GetCargosByVesselIDResponse {
    repeated Cargo cargos = 1;
}

message GetCargosByTypeIDRequest {
    int64 type_id = 1;
}
message GetCargosByTypeIDResponse {
    repeated Cargo cargos = 1;
}

message GetCargoRequest {
    int64 id = 1;
}
message GetCargoResponse {
    Cargo cargo = 1;
}

message CreateCargoRequest {
    string title = 1;
    int64 type_id = 2;
    double weight = 3;
    double volume = 4;
    int64 vessel_id = 5;
}
message CreateCargoResponse {
    int64 id = 1;
}

message UpdateCargoRequest {
    int64 id = 1;
    optional string title = 2;
    optional int64 type_id = 3;
    optional double weight = 4;
    optional double volume = 5;
    optional int64 vessel_id = 6;
}
message UpdateCargoResponse {}

message DeleteCargoRequest {
    int64 id = 1;
}
message DeleteCargoResponse {}

message ListStorageLocationsRequest {}
message ListStorageLocationsResponse {
    repeated StorageLocation storage_locations = 1;
}

message GetStorageLocationRequest {
    int64 id = 1;
}
message GetStorageLocationResponse {
    StorageLocation storage_location = 1;
}

message CreateStorageLocationRequest {
    int64 cargo_type_id = 1;
    double max_weight = 2;
    double max_volume = 3;
}
message CreateStorageLocationResponse {
    int64 id = 1;
}

message UpdateStorageLocationRequest {
    int64 id = 1;
    optional int64 cargo_type_id = 2;
    optional double max_weight = 3;
    optional double max_volume = 4;
}
message UpdateStorageLocationResponse {}

message DeleteStorageLocationRequest {
    int64 id = 1;
}
message DeleteStorageLocationResponse {}

message UseStorageLocationRequest {
    int64 storage_location_id = 1;
    int64 cargo_id = 2;
    string date_of_placement = 3;
}
message UseStorageLocationResponse {}

message ResetStorageLocationRequest {
    int64 id = 1;
}
message ResetStorageLocationResponse {}

message ListOperationsCargosRequest {}
message ListOperationsCargosResponse {
    repeated OperationCargo operations_cargos = 1;
}

message CreateOperationCargoRequest {
    int64 operation_id = 1;
    int64 cargo_id = 2;
}
message CreateOperationCargoResponse {}

message DeleteOperationCargoRequest {
    int64 operation_id = 1;
    int64 cargo_id = 2;
}
message DeleteOperationCargoResponse {}
